[project]
name = "myloginpath"
version = "0.0.4rc1"
description="MySQL login path file reader"

readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Inada Naoki", email = "songofacandy@gmail.com"}
]
license = {file = "LICENSE.txt"}
keywords = ["MySQL"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
]
dependencies = [
    "cryptography",
]

[project.urls]
Project = "https://github.com/PyMySQL/myloginpath/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "myloginpath",
]
